# textabus

./: .env.test  Cargo.toml  README.md
.github/workflows/: audit-textabus.yml  ci-textabus.yml
assets/: manifest.json  repl.js
assets/css/: font.css  layout.css  root.css
assets/css/admin/: layout.css  messages.css
assets/js/: layout.js  root.js
assets/js/admin/: numbers.js
migrations/: 20240109032016_create-messages.sql  20240109050720_create-api-responses.sql  20240110005147_create-numbers.sql  20240216031154_add-numbers-12h.sql
src/: auth.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  odws.rs  render_xml.rs  routes.rs
src/commands/: parse.rs  settings.rs  stops.rs  times.rs
src/routes/: admin.rs  root.rs  twilio.rs
templates/: about.hbs  changelog.hbs  layout.hbs  message-response.hbs  nav.hbs  root.hbs  times.hbs  twilio.hbs
templates/admin/: _message.hbs  _number.hbs  layout.hbs  messages.hbs  nav.hbs  numbers.hbs
tests/: admin.rs  helpers.rs  integration.rs  settings.rs  stops.rs  times.rs  unapproved.rs  web.rs
tests/fixtures/: fetch.sh  messages.sql  numbers-24h.sql  numbers-approved.sql  numbers-unapproved.sql  stop_schedule.json
tests/fixtures/stops/: fetch.sh  locations-address.json  locations-intersection.json  locations-no-stops.json  locations-none.json  locations.json  stops-none.json  stops.json
tests/fixtures/stops/routes/: stop_10157.json  stop_10158.json  stop_10588.json  stop_10589.json  stop_10590.json  stop_10591.json  stop_10620.json  stop_10624.json  stop_10625.json  stop_10639.json  stop_10641.json  stop_10642.json  stop_10651.json  stop_10652.json  stop_10672.json  stop_10675.json  stop_10803.json  stop_10804.json  stop_10830.json  stop_10901.json  stop_10902.json  stop_10907.json  stop_10939.json  stop_11010.json  stop_11024.json  stop_11051.json  stop_11052.json
tests/fixtures/times/: stop_schedule.json  stop_schedule_issue_10.json
