[package]
name = "textabus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "textabus"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
axum-template = { version = "2.1.0", features = ["handlebars"] }
handlebars = { version = "5.0.0", features = ["dir_source"] }
http = "1"
mime = "0.3"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
select = "0.6"
speculoos = "0.11"
