[package]
name = "textabus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "textabus"

[dependencies]
axum = { version = "0.7.3", features = ["macros", "query"] }
axum-macros = "0.4.0"
axum-template = { version = "2.1.0", features = ["handlebars"] }
chrono = "0.4"
handlebars = { version = "5.0.0", features = ["dir_source"] }
http = "1"
log = "0.4"
mime = "0.3"
pretty_env_logger = "0.5"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.195"
serde_json = "1"
serde_with = "1"
sqlx = { version = "0.7", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
indoc = "2"
select = "0.6"
speculoos = "0.11"
wiremock = "0.5"
